# uniffi-demo

./: LICENSE  README.md
base/: .gitignore  Cargo.toml  Makefile
base/src/: error.rs  lib.rs  lib.uniffi.rs  module.rs
base/uniffi/: Cargo.toml  base.udl  build.rs
base/uniffi/src/: base.udl
composed/: Cargo.toml  Makefile
composed/src/: error.rs  lib.rs  lib.uniffi.rs  module.rs
composed/uniffi/: Cargo.toml  build.rs
composed/uniffi/src/: composed.udl
