[package]
name = "composed"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["uniffi"]
uniffi = []

[dependencies]
base = { version = "*", path = "../../base/uniffi"}
thiserror = "*"
uniffi = { version = "*", features = ["cli"] }

[build-dependencies]
uniffi = { version = "*", features = ["build"] }

[lib]
name = "composed"
path = "../src/lib.uniffi.rs"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "uniffi-bindgen"
path = "uniffi-bindgen.rs"